# brill2

./: CMakeLists.txt  config.toml  config.toml.example  config_14O.toml  pyproject.toml  t0.sh
docs/: MatchDssdEvent_algorithm.md  adjust_ppac_algorithm.md  dssd_matching_algorithm.md  ppac_normalize.md  programs.md
log/: match_1096.txt  match_1099_t1.txt  match_168.txt  ppac_offset_058.txt  ppac_offset_059.txt  ppac_offset_061.txt  ppac_offset_062.txt  ppac_offset_064.txt  ppac_offset_065.txt  ppac_offset_066.txt  ppac_offset_067.txt
reference/: ana_ppac.ipynb
src/: CMakeLists.txt
src/brill/: CMakeLists.txt
src/brill/include/: config.h
src/brill/include/analysis/: config.h  dssd.h
src/brill/include/energy_calculator/: delta_energy_calculator.h
src/brill/include/event/analysis/: dssd_merge_event.h  dssd_normalized_event.h  t0_track_event.h
src/brill/include/t0/: dssd.h
src/brill/src/: CMakeLists.txt  config.cpp
src/brill/src/analysis/: config.cpp  dssd.cpp  ppac.cpp  tree.cpp
src/brill/src/analysis/event/: dssd_merge_event.cpp  t0_track_event.cpp
src/brill/src/energy_calculator/: CMakeLists.txt  delta_energy_calculator.cpp  lost_energy_calculator.cpp
src/brill/src/event/: CMakeLists.txt
src/brill/src/event/forge/: CMakeLists.txt  dssd_event.cpp
src/brill/src/event/ppac/: CMakeLists.txt  adjust_ppac.cpp  ppac_hit_event.cpp  ppac_track.cpp  ppac_track_event.cpp
src/brill/src/event/t0/: CMakeLists.txt  dssd_match.cpp  dssd_match_event.cpp  dssd_normalized_event.cpp  t0_event.cpp
src/brill/src/t0/: CMakeLists.txt  dssd.cpp
(+8 files in other folders)
